updated with GUI still WIP

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Rock, Paper, Scissors</title>
   </head>
   <body>
-    <script src="/js/rockpaperscissors.js"></script>
+    <div id="gameArea">
+      <h1>Rock Paper Scissors</h1>
+      <h3>Click a button to play!</h3>
+      <button id="rock">Rock</button><button id="paper">Paper</button><button id="scissors">Scissors</button>
+    </div>
+    <div id="results"></div>
+    <script src="/js/rockpaperscissors_gui.js"></script>
   </body>
 </html>
