DOM updates selections working on results

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h3>Click a button to play!</h3>
       <button id="rock">Rock</button><button id="paper">Paper</button><button id="scissors">Scissors</button>
     </div>
+    <div id="played"></div>
     <div id="results"></div>
     <script src="/js/rockpaperscissors_gui.js"></script>
   </body>
