added clear funcion for round, added scoreboard

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <div id="gameArea">
       <h1>Rock Paper Scissors</h1>
-      <h3>Click a button to play!</h3>
+      <h4>Click a button to play!</h4>
       <button id="rock">Rock</button><button id="paper">Paper</button><button id="scissors">Scissors</button>
+      <h3 id="scoreboard"></h3>
     </div>
     <div id="played"></div>
     <div id="results"></div>
