moved JS file for githubpages to be less dumb

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </div>
     <div id="played"></div>
     <div id="results"></div>
-    <script src="/js/rockpaperscissors_gui.js"></script>
+    <script src="rockpaperscissors_gui.js"></script>
   </body>
 </html>
